Do not log an error if CrOS AccountManager cannot find its tokens file

Chrome OS AccountManager has not been fully turned on yet and error
logging missing tokens file is creating noise in error logs.

This error log will be re-introduced once AccountManager is the default
Identity provider on Chrome OS and failure to read tokens file is an
actual error for all users.

Bug: 841524
Change-Id: I608306317f1aa6edc6f44ec3338df8a63b1bba5c
Reviewed-on: https://chromium-review.googlesource.com/1054673
Reviewed-by: Lutz Justen <ljusten@chromium.org>
Commit-Queue: Kush Sinha <sinhak@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557872}
Former-commit-id: 7bc656a1f55def0a252127ddb23fda606b3d479b